--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,19 @@ h2 {
 body {
     font-family: var(--font-rubik);
 }
+
+@layer utilities {
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background: #E8E8E8;
+    border-radius: 10px;
+  }
+}
