Feat: Atualizações no site institucional

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
     --font-croogla: 'Croogla 4F', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
     font-smooth: always;
     -webkit-font-smoothing: antialiased;
